test/tests/stages/14_pointers/valid/extra_credit/eval_compound_lhs_once.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[5]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: i
        CSingleInit: 
          CConstant: 
            CConstInt: 
              TInt: 0
            None: 
          None: 
        Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: putchar
        List[1]: 
          TIdentifier: c
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Int: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: print_A
        List[0]: 
        CB: 
          List[2]: 
            CS: 
              CExpression: 
                CFunctionCall: 
                  TIdentifier: putchar
                  List[1]: 
                    CConstant: 
                      CConstInt: 
                        TInt: 65
                      None: 
                  None: 
            CS: 
              CReturn: 
                CAddrOf: 
                  CVar: 
                    TIdentifier: i
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Pointer: 
            Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: print_B
        List[0]: 
        CB: 
          List[2]: 
            CS: 
              CExpression: 
                CFunctionCall: 
                  TIdentifier: putchar
                  List[1]: 
                    CConstant: 
                      CConstInt: 
                        TInt: 66
                      None: 
                  None: 
            CS: 
              CReturn: 
                CAddrOf: 
                  CVar: 
                    TIdentifier: i
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Pointer: 
            Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[5]: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  None: 
                  CBinary: 
                    CAdd: 
                    CDereference: 
                      CFunctionCall: 
                        TIdentifier: print_A
                        List[0]: 
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 5
                      None: 
                    None: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: i
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 5
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  None: 
                  CBinary: 
                    CAdd: 
                    CDereference: 
                      CFunctionCall: 
                        TIdentifier: print_B
                        List[0]: 
                        None: 
                      None: 
                    CConstant: 
                      CConstLong: 
                        TLong: 5
                      None: 
                    None: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: i
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 10
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
